moved my controller logic to openapi
